# Compact_List_Searcher

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  compactList.cpp  compactList.hpp
